<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:id="@+id/root"

    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="65dp"
        android:layout_height="match_parent"
        android:layout_marginEnd="40dp"

        android:background="@color/sidebg"

        app:layout_constraintEnd_toStartOf="@+id/text4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.484"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@android:drawable/ic_menu_sort_by_size" />

        <ImageView
            android:id="@+id/imageView2"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/pict1" />

        <TextView
            android:id="@+id/text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="90dp"
            android:background="@drawable/red_selector"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/montserrat_alternates_medium"
            android:gravity="center"
            android:onClick="startLogin"
            android:rotation="270"
            android:text="@string/login"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <TextView
            android:id="@+id/text2"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="120dp"
            android:background="@drawable/red_selector"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/montserrat_alternates_medium"
            android:gravity="center"
            android:onClick="startMain"
            android:rotation="270"
            android:text="@string/name"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.533"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text1" />

        <TextView
            android:id="@+id/text3"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="120dp"
            android:clickable="true"

            android:focusable="auto"
            android:fontFamily="@font/montserrat_alternates_medium"
            android:gravity="center"
            android:onClick="startProfile"
            android:rotation="270"
            android:text="@string/prof"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text2" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/btnGO"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="170dp"
        android:clickable="true"
        android:layout_marginTop="460dp"

        android:text="@string/login"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/text8"
        app:layout_constraintStart_toEndOf="@+id/constraintLayout"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/text4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="38dp"
        android:layout_marginLeft="100dp"
        android:fontFamily="@font/montserrat_alternates_medium"
        android:text="@string/logo1"
        android:textColor="@color/black"
        android:textSize="40sp"


        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/text5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="38dp"
        android:layout_marginLeft="180dp"
        android:fontFamily="@font/montserrat_alternates_medium_italic"

        android:text="@string/logo2"
        android:textColor="@color/red"

        android:textSize="40sp"
        android:textStyle="bold"

        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="HardcodedText,TextContrastCheck,TextContrastCheck" />

    <TextView
        android:id="@+id/text8"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="525dp"
        android:background="@drawable/red_selector"
        android:clickable="true"
        android:layout_marginLeft="125dp"
        android:focusable="true"
        android:onClick="startAuto"
        android:text="@string/autorization"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toEndOf="@+id/constraintLayout" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/passT"
        android:layout_width="140dp"
        android:layout_height="wrap_content"

        android:layout_marginLeft="150dp"
        android:layout_marginTop="400dp"
        android:layout_marginBottom="2dp"

        android:hint="@string/pass"

        android:textAlignment="center"
        android:textSize="20sp"

         />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/logT"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="350dp"
        android:layout_marginLeft="150dp"
        android:textAlignment="center"
        android:layout_marginBottom="30dp"
        android:hint="Email"
        android:textSize="20sp"
        />

</RelativeLayout>