<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity"
    android:id="@+id/main"
    app:cardElevation="10dp">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="65dp"
        android:layout_height="match_parent"
        android:layout_marginEnd="40dp"
        android:background="@color/sidebg"
        app:cardElevation="10dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardElevation="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/pict1" />

        <TextView
            android:id="@+id/text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="120dp"
            android:background="@drawable/red_selector"
            android:clickable="true"
            android:focusable="false"
            android:fontFamily="@font/montserrat_alternates_medium"
            android:gravity="center"
            android:onClick="startLogin"
            android:rotation="270"
            android:text="@string/login"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold"

            app:cardElevation="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text2"
            tools:ignore="NotSibling" />

        <TextView
            android:id="@+id/text2"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="120dp"
            android:background="@drawable/red_selector"
            android:fontFamily="@font/montserrat_alternates_medium"
            android:gravity="center"
            android:onClick="startMain"
            android:rotation="270"
            android:text="@string/name"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text3" />

        <TextView
            android:id="@+id/text3"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:onClick="startProfile"
            android:clickable="true"
            android:layout_marginTop="80dp"
            android:fontFamily="@font/montserrat_alternates_medium"
            android:gravity="center"
            android:rotation="270"
            android:text="@string/prof"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="52dp"
            app:cardElevation="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.515"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@android:drawable/ic_menu_sort_by_size" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/text4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

       android:layout_marginTop="38dp"
        android:layout_marginLeft="100dp"
        android:fontFamily="@font/montserrat_alternates_medium"
        android:text="@string/logo1"
        android:textColor="@color/black"
        android:textSize="40sp"


        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/text5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="38dp"
android:layout_marginLeft="180dp"
        android:fontFamily="@font/montserrat_alternates_medium_italic"

        android:text="@string/logo2"
        android:textColor="@color/red"

        android:textSize="40sp"
        android:textStyle="bold"

        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="HardcodedText,TextContrastCheck,TextContrastCheck" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/pass"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
       android:layout_marginTop="460dp"
        android:layout_marginLeft="165dp"

        android:hint="Password"
        android:text=""
        android:textAlignment="center"
        android:textSize="20dp"

        app:layout_constraintEnd_toEndOf="parent" />


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/login"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="165dp"
        android:layout_marginTop="410dp"
        android:hint="Login"
        android:text=""
        android:textAlignment="center"
        android:textSize="20dp"

        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/Phone"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="165dp"
        android:layout_marginTop="360dp"
        android:hint="Mobile phone"
        android:text=""
        android:textAlignment="center"
        android:textSize="20dp"

        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/Surname"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:layout_marginTop="310dp"
      android:layout_marginLeft="165dp"
        android:hint="Surname"
        android:text=""
        android:textAlignment="center"
        android:textSize="20dp"

        app:layout_constraintEnd_toEndOf="parent" />


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/Name"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
       android:layout_marginTop="260dp"
        android:layout_marginLeft="165dp"
        android:hint="Name"
        android:text=""
        android:textAlignment="center"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnReg"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:layout_marginTop="600dp"
        android:layout_marginLeft="150dp"
        android:onClick="startAuto"
        android:text="@string/auto"
        android:textSize="20sp"
        android:layout_marginBottom="100dp"

        android:textStyle="bold"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />




</androidx.cardview.widget.CardView>